# shruti-parade

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  release.yml
src/: audio.rs  audio_file.rs  basic_pitch.rs  config.rs  dsp.rs  events.rs  inference.rs  lib.rs  main.rs  midi_file.rs  midi_router.rs  particles.rs  render.rs  timing.rs  transport.rs  wav_ingest.rs
src/shaders/: bloom.wgsl  notes.wgsl
tests/: inference_diag.rs  onset_test.rs  unit_tests.rs
