[package]
name = "shruti-parade"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling & logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio I/O
cpal = "0.15"

# Lock-free concurrency
rtrb = "0.3"
crossbeam-channel = "0.5"

# DSP
rustfft = "6"
realfft = "3"

# Audio file I/O
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "pcm", "flac", "ogg", "vorbis", "wav", "adpcm"] }

# MIDI file parsing
midly = "0.5"

# Graphics
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
